--- a/observability/logging/logging-6.0/log6x-clf.adoc
+++ b/observability/logging/logging-6.0/log6x-clf.adoc
@@ -5,3 +5,8 @@ include::_attributes/common-attributes.adoc[]
 :context: logging-6x
 
 toc::[]
+
+[source,yaml]
+--
+include::snippets/log6x-clf-samples.yaml[]
+--
